--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>Details here...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originaly from Colombia, but I've been in the bay area for the last 6 years.  Before that I lived in different places such as Iowa, Florida, Maryland and NC.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing and spending time with my daughter and husband.  Also I like puzzles, hicking, reading, learning new things, watching tv, knitting, gardening.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Somewhere where there's work-life balance, a colaborative environment, career growth and where they have a good impact in the world</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Alameda, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>With the constant and rapid change of Tecnology, I believe web develpment is changing the way we interact with it, improving it and improving our life style in the process.  For that reason I find it very interesting, and something worth spending my time learning.</p>
     </section>
 
     <footer id="footer">
